--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^2.2.3",
     "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.3.1",
     "react-pdf": "^5.7.2",
     "react-scripts": "^2.1.3",
     "react-transition-group": "^4.4.2",
